# gower-similarity

./: .gitignore  .pre-commit-config.yaml  CopheneticTree.py  GowerMetric.py  GowerMetricCy.py  GowerMetricTestClass.py  MixedVariablesMeasures.py  PoC.py  README.md  gower_metric_call.c  gower_metric_call.cp39-win_amd64.pyd  gower_metric_call.pyx  kmed.ipynb  main.py  metrics_comparison.py  metrics_computation.R  pyproject.toml  setup.py  test.py  utils.py  weights.py
.github/: CODEOWNERS
.github/workflows/: python-package.yml  python-publish.yml  python-test.yml
tests/: UnitTestsGowerMetric.py  conftest.py  test_metrics.py
tests/tests_files/: adult_cols_type.csv  car_insurance_claim.csv  car_insurance_claim_cols_type.csv  diabetes_cols_type.csv  survey.csv  survey_cols_type.csv
