[tool.poetry]
name = "gowermetric"
version = "0.1.0"
description = ""
authors = ["Arch4ngel21 <adammichal657@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

numpy = "^1.23.3"
scikit-learn = "^1.1.2"
pandas = "^1.5.1"
matplotlib = "^3.6.2"
tqdm = "^4.64.1"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
