[tool.poetry]
name = "gowermetric"
version = "0.1.0"
description = ""
authors = ["Arch4ngel21 <adammichal657@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

numpy = "^2.0.1"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
tqdm = "^4.66.6"
Cython = "^3.0.10"
ica = "^0.5"
numba = "^0.60.0"
KDEpy = "^1.1.11"
optuna = "^4.1.0"
hdbscan = "^0.8.39"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
unittest2 = "^1.1.0"
pytest = "^8.3.3"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
